--- a/ntnu-24/theme/kripos.css
+++ b/ntnu-24/theme/kripos.css
@@ -16,14 +16,14 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
  * GLOBAL STYLES
  *********************************************/
 :root {
-  --r-background-color: #F0F1EB;
+  --r-background-color: #0D2C4B;
   --r-main-font: Palatino Linotype, Book Antiqua, Palatino, FreeSerif, serif;
   --r-main-font-size: 40px;
-  --r-main-color: #000;
+  --r-main-color: #F0F1EB ;
   --r-block-margin: 20px;
   --r-heading-margin: 0 0 20px 0;
   --r-heading-font: Palatino Linotype, Book Antiqua, Palatino, FreeSerif, serif;
-  --r-heading-color: #383D3D;
+  --r-heading-color: #F0F1EB;
   --r-heading-line-height: 1.2;
   --r-heading-letter-spacing: normal;
   --r-heading-text-transform: none;
@@ -45,8 +45,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 }
 
 .reveal-viewport {
-  background: #F0F1EB;
-  background-color: var(--r-background-color);
+  /*background: #F0F1EB;
+   background-color: var(--r-background-color); */
+  background: linear-gradient(#000000, #0D2C4B);
 }
 
 .reveal {
@@ -196,7 +197,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   margin: var(--r-block-margin) auto;
   padding: 5px;
   font-style: italic;
-  background: rgba(255, 255, 255, 0.05);
+  /*background: rgba(255, 255, 255, 0.05);*/
   box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -258,7 +259,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal table td {
   text-align: left;
   padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid;
+  border-bottom: 0px solid;
 }
 
 .reveal table th[align=center],
